handover/evidence/dev_self_hosting/dev_1778811250681_913405/artifacts/command_0046_stderr.txt
   Compiling turingosv4 v0.1.0 (/home/zephryj/projects/turingosv4)
warning: unused import: `ObjectType as Git2ObjectType`
  --> src/bottom_white/cas/store.rs:26:12
   |
26 | use git2::{ObjectType as Git2ObjectType, Repository};
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `ObjectType as Git2ObjectType`
  --> src/bottom_white/ledger/transition_ledger.rs:36:12
   |
36 | use git2::{ObjectType as Git2ObjectType, Repository, Signature as GitSignature};
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `KernelError`
 --> src/bus.rs:8:29
  |
8 | use crate::kernel::{Kernel, KernelError};
  |                             ^^^^^^^^^^^

warning: unused import: `TapeError`
 --> src/bus.rs:9:54
  |
9 | use crate::ledger::{EventType, Ledger, Node, NodeId, TapeError};
  |                                                      ^^^^^^^^^

warning: unused imports: `Deserialize` and `Serialize`
  --> src/bus.rs:13:13
   |
13 | use serde::{Deserialize, Serialize};
   |             ^^^^^^^^^^^  ^^^^^^^^^

warning: unused imports: `MICRO_PER_COIN` and `MicroCoin`
  --> src/economy/monetary_invariant.rs:26:29
   |
26 | use crate::economy::money::{MicroCoin, MICRO_PER_COIN};
   |                             ^^^^^^^^^  ^^^^^^^^^^^^^^

warning: unused import: `Sha256`
  --> src/runtime/agent_keypairs.rs:31:20
   |
31 | use sha2::{Digest, Sha256};
   |                    ^^^^^^

warning: unused import: `CapsulePrivacyPolicy`
  --> src/runtime/audit_assertions.rs:83:30
   |
83 | use crate::state::typed_tx::{CapsulePrivacyPolicy, TypedTx};
   |                              ^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::collections::BTreeMap`
  --> src/runtime/audit_views.rs:27:5
   |
27 | use std::collections::BTreeMap;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::state::price_index::RationalPrice`
  --> src/runtime/audit_views.rs:32:5
   |
32 | use crate::state::price_index::RationalPrice;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `LpShareAmount` and `ShareSidePair`
  --> src/runtime/audit_views.rs:33:53
   |
33 | use crate::state::q_state::{AgentId, EconomicState, LpShareAmount, PoolStatus, ShareSidePair};
   |                                                     ^^^^^^^^^^^^^              ^^^^^^^^^^^^^

warning: unused import: `ShareAmount`
  --> src/runtime/audit_views.rs:35:67
   |
35 | use crate::state::typed_tx::{EventId, PositionKind, PositionSide, ShareAmount};
   |                                                                   ^^^^^^^^^^^

warning: unused import: `Deserialize`
 --> src/sdk/tools/librarian.rs:6:13
  |
6 | use serde::{Deserialize, Serialize};
  |             ^^^^^^^^^^^

warning: unused import: `Path`
 --> src/sdk/tools/librarian.rs:9:17
  |
9 | use std::path::{Path, PathBuf};
  |                 ^^^^

warning: unused import: `ToolSignal`
 --> src/sdk/tools/search.rs:4:24
  |
4 | use crate::sdk::tool::{ToolSignal, TuringTool};
  |                        ^^^^^^^^^^

warning: unused import: `std::path::Path`
 --> src/sdk/tools/search.rs:6:5
  |
6 | use std::path::Path;
  |     ^^^^^^^^^^^^^^^

warning: unused import: `TxId`
  --> src/state/sequencer.rs:41:82
   |
41 | use crate::state::q_state::{AgentId, EscrowEntry, Hash, QState, TaskMarketEntry, TxId};
   |                                                                                  ^^^^

warning: unused imports: `AgentId` and `ShareSidePair`
  --> src/state/price_index.rs:23:29
   |
23 | use crate::state::q_state::{AgentId, ChallengeStatus, EconomicState, ShareSidePair};
   |                             ^^^^^^^                                  ^^^^^^^^^^^^^

warning: unused import: `NodePosition`
  --> src/state/price_index.rs:24:39
   |
24 | use crate::state::typed_tx::{EventId, NodePosition, PositionSide, ShareAmount};
   |                                       ^^^^^^^^^^^^

error[E0308]: mismatched types
    --> src/runtime/chain_derived_run_facts.rs:1036:68
     |
1036 |         let at = match read_attempt_telemetry_shared_slot_from_cas(cas, &cid) {
     |                        ------------------------------------------- ^^^ expected `&CasStore`, found `CasStore`
     |                        |
     |                        arguments to this function are incorrect
     |
note: function defined here
    --> src/runtime/attempt_telemetry.rs:888:8
     |
 888 | pub fn read_attempt_telemetry_shared_slot_from_cas(
     |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 889 |     cas: &CasStore,
     |     --------------
help: consider borrowing here
     |
1036 |         let at = match read_attempt_telemetry_shared_slot_from_cas(&cas, &cid) {
     |                                                                    +

warning: unused import: `Digest`
  --> src/runtime/agent_keypairs.rs:31:12
   |
31 | use sha2::{Digest, Sha256};
   |            ^^^^^^

For more information about this error, try `rustc --explain E0308`.
warning: `turingosv4` (lib) generated 20 warnings
error: could not compile `turingosv4` (lib) due to 1 previous error; 20 warnings emitted
